<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/homebg"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="160.0dip"
        android:layout_height="fill_parent"
        android:background="@drawable/navigationbg"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/interviewsOption"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30.0dip"
            android:layout_marginRight="10.0dip"
            android:drawableLeft="@drawable/interviews"
            android:drawablePadding="10.0dip"
            android:paddingBottom="5.0dip"
            android:paddingLeft="10.0dip"
            android:paddingTop="5.0dip"
            android:text="@string/audio"
            android:textSize="20.0dip"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/searchOption"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30.0dip"
            android:layout_marginRight="10.0dip"
            android:drawableLeft="@drawable/search2"
            android:drawablePadding="10.0dip"
            android:paddingBottom="5.0dip"
            android:paddingLeft="10.0dip"
            android:paddingTop="5.0dip"
            android:text="@string/search"
            android:textSize="20.0dip"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/createOption"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10.0dip"
            android:drawableLeft="@drawable/create"
            android:drawablePadding="10.0dip"
            android:paddingBottom="5.0dip"
            android:paddingLeft="10.0dip"
            android:paddingTop="5.0dip"
            android:text="@string/create"
            android:textSize="20.0dip"
            android:textStyle="bold" />
    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="0dip"
        android:layout_height="fill_parent"
        android:layout_weight="1.0"
        android:flipInterval="30"
        android:persistentDrawingCache="animation" />

</LinearLayout>