<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5.0dip"
        android:layout_marginLeft="20.0dip"
        android:layout_marginRight="10.0dip"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/titletextview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="#000000"
            android:textSize="25.0dip"
            android:textStyle="bold" />

        <Button
            android:id="@+id/overview"
            android:layout_width="wrap_content"
            android:layout_height="30.0dip"
            android:layout_marginRight="5.0dip"
            android:layout_marginTop="5.0dip"
            android:layout_toLeftOf="@+id/change"
            android:background="@drawable/delete"
            android:onClick="overview"
            android:text="@string/overview"
            android:textColor="#ffffff"
            android:textSize="17.0dip"
            android:textStyle="bold"
            android:visibility="gone" />

        <Button
            android:id="@+id/change"
            android:layout_width="wrap_content"
            android:layout_height="30.0dip"
            android:layout_marginRight="5.0dip"
            android:layout_marginTop="5.0dip"
            android:layout_toLeftOf="@+id/delete"
            android:background="@drawable/delete"
            android:text="@string/edit"
            android:textColor="#ffffff"
            android:textSize="17.0dip"
            android:textStyle="bold"
            android:visibility="gone" />

        <Button
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="30.0dip"
            android:layout_alignParentRight="true"
            android:layout_marginTop="5.0dip"
            android:background="@drawable/delete"
            android:onClick="deleteItem"
            android:text="@string/delete"
            android:textColor="#ffffff"
            android:textSize="17.0dip"
            android:textStyle="bold"
            android:visibility="gone" />
    </RelativeLayout>

    <TextView
        android:id="@+id/datatextview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10.0dip"
        android:layout_marginRight="10.0dip"
        android:background="@drawable/interviewbg"
        android:text=""
        android:textColor="#000000"
        android:textSize="25.0dip" />

</LinearLayout>