<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/map_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <com.google.android.maps.MapView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/mapview"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:apiKey="0m3sSmUgQ81yT0NCLZa4PyddR-28Tysq3PQCFpw"
        android:clickable="true"
        android:enabled="true" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_gravity="right"
        android:layout_marginBottom="200.0dip"
        android:layout_marginRight="20.0dip"
        android:layout_marginTop="200.0dip"
        android:background="@drawable/mapcontrol"
        android:orientation="vertical" >

        <Button
            android:id="@+id/searchMap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/search"
            android:drawablePadding="10.0dip"
            android:onClick="searchMap"
            android:text="@string/search"
            android:textColor="#ffffff"
            android:textSize="25.0dip"
            android:textStyle="bold" />

        <Button
            android:id="@+id/viewMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/view"
            android:drawablePadding="10.0dip"
            android:text="Satellite"
            android:textColor="#ffffff"
            android:textSize="25.0dip"
            android:textStyle="bold" />

        <Button
            android:id="@+id/drawMove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/edit"
            android:drawablePadding="10.0dip"
            android:text="Draw"
            android:textColor="#ffffff"
            android:textSize="25.0dip"
            android:textStyle="bold" />

        <Button
            android:id="@+id/undoButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/undo"
            android:drawablePadding="10.0dip"
            android:onClick="undoButton"
            android:text="Undo"
            android:textColor="#ffffff"
            android:textSize="25.0dip"
            android:textStyle="bold" />

        <Button
            android:id="@+id/record"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/microphone"
            android:drawablePadding="20.0dip"
            android:text="@string/recordTextView"
            android:textColor="#ffffff"
            android:textSize="25.0dip"
            android:textStyle="bold" />

        <Button
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/save"
            android:drawablePadding="10.0dip"
            android:text="@string/saveTextView"
            android:textColor="#ffffff"
            android:textSize="25.0dip"
            android:textStyle="bold" />
    </LinearLayout>

</FrameLayout>